--- a/themes/SuiteP/css/style.css
+++ b/themes/SuiteP/css/style.css
@@ -11639,7 +11639,7 @@ a.sugar-tab-close, .yui-navset .yui-nav a.sugar-tab-close, .yui-navset .yui-nav 
   padding: 10px; }
 
 #caseStyleContact {
-  background: #f7f7f7;
+  background: #e6d5a5;
   border: 1px solid transparent;
   color: #534d64;
   border-radius: 4px;
@@ -11689,6 +11689,15 @@ a.sugar-tab-close, .yui-navset .yui-nav a.sugar-tab-close, .yui-navset .yui-nav 
 #case_updates input[type=button] {
   margin-left: 10px;
   margin-top: 10px; }
+
+.caseUpdate {
+  margin: 5px 0 0 15px; }
+
+#extramargin {
+  margin: 0 50px 0 50px; }
+
+#lessmargin {
+  margin: 0 50px 0 0; }
 
 div#searchResults {
   overflow-y: auto;
@@ -13641,15 +13650,6 @@ input[type=text].cstm_code {
   resize: both;
   width: 200px;
   height: 200px; }
-
-.caseUpdate {
-  margin: 5px 0 0 15px; }
-
-#extramargin {
-  margin: 0 0 0 50px; }
-
-#lessmargin {
-  margin: 0 50px 0 0; }
 
 .themePicker {
   padding-top: 1em; }
