fixed - #146 works for all themes

--- a/themes/Suite7/css/style.css
+++ b/themes/Suite7/css/style.css
@@ -5821,6 +5821,7 @@ table tr#delegates_search {
 /* fix schedule bar popup on calendar */
 .ui-front, .ui-dialog {
     z-index: 1100 !important;
+    left: 1531px !important;
 }
 
 .panel-heading {
