--- a/themes/SuiteP/css/style.css
+++ b/themes/SuiteP/css/style.css
@@ -7215,6 +7215,7 @@ hr {
 /* fix schedule bar popup on calendar */
 .ui-dialog {
     z-index: 1100 !important;
+    left: 1241px !important;
 }
 
 @media (max-width: 768px) {
