--- a/themes/SuiteR/css/style.css
+++ b/themes/SuiteR/css/style.css
@@ -5563,6 +5563,7 @@ table tr#delegates_search {
 /* fix schedule bar popup on calendar */
 .ui-front, .ui-dialog {
     z-index: 1100 !important;
+    left: 1280px !important;
 }
 
 .panel-heading {
