fixed - #414 works for all themes

--- a/themes/Suite7/css/style.css
+++ b/themes/Suite7/css/style.css
@@ -5826,7 +5826,10 @@ table tr#delegates_search {
 .panel-heading {
     padding-bottom: 20px;
 }
-
+.ui-dialog {
+    left: 30px !important;
+    top: 480px !important;
+}
 
 .modal {
     z-index: 16000;
