--- a/themes/Suite7/css/style.css
+++ b/themes/Suite7/css/style.css
@@ -465,7 +465,7 @@ div#content .noLeftColumn
 #newRecord form input[type=button],
 #newRecord form input[type=submit],
 #newRecord form input[type=reset],
-.btn-success,
+
 .btn-default,
 .btn-danger,
 .btn-info,
@@ -473,6 +473,8 @@ div#content .noLeftColumn
 {
     padding-top: 0px;
     vertical-align: bottom;
+    width: 60px;
+    possition: 150px;
 }
 
 #newRecord form .dataLabel {
@@ -501,6 +503,14 @@ div#content .noLeftColumn
     text-decoration: underline;
     border-bottom: 0px;
     padding-left: 0px;
+}
+
+.btn-success {
+    border: none;
+    position:absolute;
+    size: 200px;
+    Top: -6px;
+    Left: -35px;
 }
 
 /* css dropdown menu */
@@ -2492,7 +2502,7 @@ input, select, textarea, button, .button
     border: 1px solid;
 }
 button, input[type=submit], input[type=reset], input[type=button], .button,
-.btn-success,
+
 .btn-default,
 .btn-danger,
 .btn-info,
@@ -3185,7 +3195,7 @@ a:hover
 }
 
 button, input[type=submit], input[type=reset], input[type=button], .button,
-.btn-success,
+
 .btn-default,
 .btn-danger,
 .btn-info,
@@ -4684,7 +4694,7 @@ ul#drop-nav ul li:hover {
 }
 
 #search {
-    padding:5px 5px 00;
+    padding:3px 5px 00;
     margin:0;
 }
 
