AOR: Fixing issues with css (SuiteR)

--- a/themes/SuiteR/css/style.css
+++ b/themes/SuiteR/css/style.css
@@ -5310,15 +5310,21 @@ object{
 /* report layout */
 #report-editview-footer {width: 70%; float: left;}
 
-#detailpanel_fields,
-#detailpanel_conditions,
-#detailpanel_charts {
-    border-top: 1px solid lightgray;
+#detailpanel_fields_select {float: left; width: 100%; overflow-y: auto; margin-right: 20px;}
+.aor_dragbox {height: 250px; overflow: auto;}
+
+.aor-module-panel .col-sm-5 {
+    width: 49.00%;
 }
 
+.aor-module-panel .col-sm-2 {
+    width: 2.00%;
+}
 
-#detailpanel_fields_select {float: left; width: 20%; height: 640px; overflow-y: auto; margin-right: 20px;}
-.aor_dragbox {height: 250px; overflow: scroll;}
+.aor-module-panel h4 {
+    margin-bottom: 8px;
+}
+
 #report-editview-footer .tab-togglers {width: 80%;}
 #report-editview-footer .tab-toggler {display: block; float: left;}
 #report-editview-footer .tab-toggler.active .button {background-color: #286090;}
